<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:src="@android:drawable/ic_menu_camera" />

    <TextView
        android:text="@string/profile_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvName"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/profile_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/profile_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/profile_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvPhone"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- RESUMEN -->
    <TextView
        android:text="Resumen de actividades"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvReservadas"
        android:text="Reservadas: 0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvRealizadas"
        android:text="Realizadas: 0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile_edit"/>

    <LinearLayout
        android:id="@+id/editContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_name_label"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_last_name_hint"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_username_label"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/profile_phone_label"/>

        <!-- PREFERENCIAS -->
        <TextView
            android:text="Preferencias de viaje"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/cbAventura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aventura"/>

        <CheckBox
            android:id="@+id/cbCultura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tour guiado"/>

        <CheckBox
            android:id="@+id/cbGastronomia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gastronomía"/>

        <CheckBox
            android:id="@+id/cbNaturaleza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Excursion"/>

        <CheckBox
            android:id="@+id/cbRelax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Free tour"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_save"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnGoToChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile_change_password" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#B00020"
        android:textColor="@android:color/white"
        android:text="Cerrar Sesión" />

</LinearLayout>

</ScrollView>